--- a/app/src/main/res/layout/activity_party_view.xml
+++ b/app/src/main/res/layout/activity_party_view.xml
@@ -89,5 +89,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/playerVideoView"
+        android:layout_width="384dp"
+        android:layout_height="184dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/Promote"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Distance"
+        app:layout_constraintVertical_bias="1.0"></com.google.android.exoplayer2.ui.PlayerView>
+
 
 </android.support.constraint.ConstraintLayout>
