added gender ratio

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,134 +4,137 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".registration"
     android:background="@drawable/background"
-    tools:showIn="@layout/activity_registration">
+   >
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="320dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="300dp"
+        android:layout_width="321dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="16dp"
         android:text="                                      Register"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#ffffff"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/nameregistration"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="374dp"
-        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="46dp"
+        android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:hint="username"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:textColorHint="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/mail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/mail"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="275dp"
-        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="46dp"
+        android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:hint="e-mail"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameregistration"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:textColorHint="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/DOB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameregistration" />
 
     <EditText
         android:id="@+id/passwordregistration"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="138dp"
-        android:layout_marginEnd="46dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="46dp"
+        android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DOB"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:textColorHint="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/DOB" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="130dp"
         android:layout_height="70dp"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginEnd="46dp"
         android:layout_marginLeft="208dp"
         android:layout_marginRight="46dp"
         android:layout_marginStart="208dp"
-        android:layout_marginTop="110dp"
+        android:background="#99cc00"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordregistration"
-        app:layout_constraintVertical_bias="0.6"
-        android:background="#99cc00"/>
-
-    <TextView
-        android:id="@+id/failed"
-        android:layout_width="187dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="85dp"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/register"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordregistration"
-        android:textColor="#ffffff"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/DOB"
         android:layout_width="303dp"
         android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="9dp"
         android:text="Select Date of Birth"
+        android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordregistration"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mail"
-        android:textColor="#ffffff"/>
+        app:layout_constraintTop_toBottomOf="@+id/mail" />
+
+    <Spinner
+        android:id="@+id/spinnerGender"
+        android:layout_width="303dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="89dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordregistration"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
