added gender ratio

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".registration"
-    android:background="@drawable/background"
+    android:background="#000000"
    >
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="321dp"
         android:layout_height="38dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -19,6 +20,7 @@
         android:layout_marginTop="16dp"
         android:text="                                      Register"
         android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/nameregistration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,12 +29,12 @@
         android:id="@+id/nameregistration"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="username"
         android:inputType="textPersonName"
@@ -48,12 +50,12 @@
         android:id="@+id/mail"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="e-mail"
         android:inputType="textPersonName"
@@ -68,17 +70,19 @@
     <EditText
         android:id="@+id/passwordregistration"
         android:layout_width="303dp"
-        android:layout_height="54dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="35dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:textColor="#ffffff"
         android:textColorHint="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerGender"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,29 +93,31 @@
         android:layout_width="130dp"
         android:layout_height="70dp"
         android:layout_marginBottom="28dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginLeft="208dp"
-        android:layout_marginRight="46dp"
-        android:layout_marginStart="208dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="17dp"
         android:background="#99cc00"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />
 
     <TextView
         android:id="@+id/DOB"
         android:layout_width="303dp"
         android:layout_height="54dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginRight="30dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="9dp"
-        android:text="Select Date of Birth"
+        android:layout_marginTop="10dp"
+        android:text="Select DOB"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordregistration"
@@ -122,19 +128,19 @@
 
     <Spinner
         android:id="@+id/spinnerGender"
-        android:layout_width="303dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="89dp"
+        android:layout_width="301dp"
+        android:layout_height="36dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginLeft="35dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginRight="35dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:background="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordregistration"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordregistration" />
 
 </android.support.constraint.ConstraintLayout>
