--- a/app/src/main/res/layout/activity_create_party.xml
+++ b/app/src/main/res/layout/activity_create_party.xml
@@ -46,10 +46,10 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="140dp"
         android:ems="10"
-        android:textColorHint="#ffffff"
-        android:textColor="#ffffff"
-        android:hint="Enter name of sponsor"
+        android:hint="Sponsor Name"
         android:inputType="textPersonName"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/addPic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
