--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -31,27 +31,38 @@
         android:inputType="textPersonName"
         android:textColor="#99cc00"/>
 
-    <TextView
-        android:id="@+id/Messages"
-        android:layout_width="wrap_content"
-        android:layout_height="439dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        android:gravity="bottom"
-        android:textColor="#99cc00"/>
-
     <Button
         android:id="@+id/HomeFromChat"
         android:layout_width="102dp"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
-         android:background="#99cc00"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:background="#99cc00"
         android:text="Home" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="451dp"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/scrollView1"
+        android:layout_alignParentTop="true"
+        android:background="#000000"
+        tools:context=".chatRoom">
+
+
+        <TextView
+            android:id="@+id/Messages"
+            android:layout_width="wrap_content"
+            android:layout_height="439dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
+            android:gravity="bottom"
+            android:textColor="#99cc00" />
+
+
+    </ScrollView>
 </RelativeLayout>
