--- a/app/src/main/res/layout/activity_party_view.xml
+++ b/app/src/main/res/layout/activity_party_view.xml
@@ -56,7 +56,7 @@
         android:layout_marginLeft="3dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="2dp"
-        android:text="Home"
+        android:text="Comments"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -103,6 +103,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Distance"
         app:layout_constraintVertical_bias="1.0"></com.google.android.exoplayer2.ui.PlayerView>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
